# pyrmit

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  .gitignore  Dockerfile  create-chunks.py  database.py  dependencies.py  dev_access.py  llm.py  logging_config.py  main.py  models.py  observability.py  output.md  pyproject.toml  requirements.txt  schemas.py  security.py
backend/agents/: AGENTIC_FLOW.md  __init__.py  base.py  document_agent.py  law_agent.py  orchestrator.py  parsers.py
backend/chunking/: big-experiment.py  chunk_detaljplan.py  chunk_laws.py  chunk_plan_o_bygg.ipynb  create-chunks.py  embed.py  ingest_data_folder.py  ingest_laws.py  ingest_pipeline.py  readme.md
backend/chunking/data/: plan_och_bygg_lag.txt
backend/chunking/laws/: anlaeggningslag.txt  bostadsraettslag.txt  expropriationslag.txt  fastighetsbildningslag.txt  jordabalk.txt  miljoebalken.txt  plan_och_bygg_lag.txt
backend/data/law_chunks/: anlaeggningslag.chunks.json  bostadsraettslag.chunks.json  expropriationslag.chunks.json  fastighetsbildningslag.chunks.json  miljoebalken.chunks.json  plan_och_bygg_lag.chunks.json
backend/db/: create_law_chunks.sql  database.py  match_functions.sql  push_db.py  run_match_functions.py
backend/eval/: big-experiment.py
backend/ocr/: create_markdown.py  detaljplan_ocr.py
backend/prompts/: land_law_prompt.yaml  test_rag_prompt.yaml
backend/routers/: __init__.py  access_gate.py  agents.py  auth.py  chat.py  chunks.py  queryDB.py
backend/tests/: test_agents.py
frontend/: .gitignore  (+6 more)
(+91 files in other folders)
